syntax = "proto3";

package likechain.likenft.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/likecoin/likecoin-chain/v4/x/likenft/types";

message ClassRevealQueueEntry {
  google.protobuf.Timestamp reveal_time = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
  string class_id = 2;
}
